syntax = "proto3";

package zfs;

import "common.proto";

message DatasetT {
    string path = 1;
    repeated Property properties = 2;
    repeated DatasetT datasets = 3;
}

message ListDatasetRequest {
    repeated string user_properties = 1;
}

message ListDatasetReply {
    repeated DatasetT datasets = 1;
}

message GetDatasetRequest {
    string path = 1;
    repeated string user_properties = 2;
}

message GetDatasetReply {
    DatasetT dataset = 1;
}

message CreateDatasetRequest {
    DatasetT dataset = 1;
}

message CreateDatasetReply {
    DatasetT dataset = 1;
}

message UpdateDatasetRequest {
    DatasetT dataset = 1;
}

message UpdateDatasetReply {
    DatasetT dataset = 1;
}

message DeleteDatasetRequest {
    string path = 1;
}

message DeleteDatasetReply {
    bool success = 1;
}

service Dataset {
    rpc List(ListDatasetRequest) returns (ListDatasetReply) {}
    rpc Get(GetDatasetRequest) returns (GetDatasetReply) {}
    rpc Create(CreateDatasetRequest) returns (CreateDatasetReply) {}
    rpc Update(UpdateDatasetRequest) returns (UpdateDatasetReply) {}
    rpc Delete(DeleteDatasetRequest) returns (DeleteDatasetReply) {}
}
